# src/common/model/20251224085949_add_url_coloumn_in_reels.js
@@ -1,0 +1,19 @@
+/**
+ * @param { import("knex").Knex } knex
+ * @returns { Promise<void> }
+ */
+exports.up = function(knex) {
+  return knex.schema.alterTable('reels',(table)=>{
+    table.string('redirectUrl').nullable()
+  })
+};
+
+/**
+ * @param { import("knex").Knex } knex
+ * @returns { Promise<void> }
+ */
+exports.down = function(knex) {
+   return knex.schema.alterTable('reels',(table)=>{
+    table.dropColumn('redirectUrl')
+  })
+};
